<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart_title"
        android:textSize="30sp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/empty_cart_subtitle"
        app:layout_constraintEnd_toEndOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="@id/textViewTitle"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:layout_editor_absoluteX="42dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewSubTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewSubTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>