<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:paddingBottom="55dp"
    tools:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/item_name_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/item_name_hint"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:maxLength="50"/>

        <TextView
            android:id="@+id/item_price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/item_price_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_price_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789.,"
                android:maxLength="50"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/item_quantity_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/quantity_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:layout_marginTop="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/item_quantity_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:textSize="24sp"
                android:textStyle="bold"
                android:backgroundTint="?attr/colorSurface"
                android:textColor="?attr/colorPrimary"
                android:layout_marginStart="8dp"
                tools:ignore="HardcodedText" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_quantity_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="20sp"
                    android:inputType="number"
                    android:hint="@string/quantity_hint"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/item_quantity_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:textSize="24sp"
                android:textStyle="bold"
                android:backgroundTint="?attr/colorSurface"
                android:textColor="?attr/colorPrimary"
                android:layout_marginStart="8dp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <AutoCompleteTextView
                android:id="@+id/item_unit_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:dropDownHeight="200dp"
                android:hint="@string/unit_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/subtotal_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="Total spend: R$"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/save"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>