<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/empty_items_view"
        layout="@layout/empty_cart_items"
        android:visibility="gone"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/subtotal_cart_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_pencil"
            android:gravity="center"
            android:hint="@string/list_name_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:itemCount="3"
            tools:listitem="@layout/row_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/subtotal_cart_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
        android:layout_margin="10dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@id/button_clear_all_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/button_clear_all_cart" />

    <Button
        android:id="@+id/button_clear_all_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_cart"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>